--- a/gallery.html
+++ b/gallery.html
@@ -135,6 +135,13 @@
   </div>
 </section>
 
+<!-- DIVIDER BETWEEN GALLERY & CONTACT SECTIONS -->
+<div class="section-divider">
+  <div class="specialize-line"></div>
+  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <div class="specialize-line"></div>
+</div>
+
   <!-- CONTACT SECTION -->
 <section id="contact" class="contact-section">
   <div class="contact-content">
