--- a/gallery.html
+++ b/gallery.html
@@ -288,7 +288,7 @@
 
   // Set initial color
   const blackColor = getComputedStyle(document.documentElement).getPropertyValue('--black');
-  [header, founder, testimonials, gallery, contact].forEach(section => {
+  [header, intro, gallery, contact].forEach(section => {
     section.style.backgroundColor = blackColor;
   });
   dividers.forEach(div => {
