--- a/gallery.html
+++ b/gallery.html
@@ -60,11 +60,11 @@
         <img src="images/gallery/wedding3.jpg" alt="Wedding 3" />
         <img src="images/gallery/wedding4.jpg" alt="Wedding 4" />
         <img src="images/gallery/wedding5.jpg" alt="Wedding 5" />
-        <img src="images/gallery/wedding1.jpg" alt="Wedding 1 clone" />
-        <img src="images/gallery/wedding2.jpg" alt="Wedding 2 clone" />
-        <img src="images/gallery/wedding3.jpg" alt="Wedding 3 clone" />
-        <img src="images/gallery/wedding4.jpg" alt="Wedding 4 clone" />
-        <img src="images/gallery/wedding5.jpg" alt="Wedding 5 clone" />
+        <img src="images/gallery/wedding1.jpg" alt="Wedding 1 clone" class="clone"/>
+        <img src="images/gallery/wedding2.jpg" alt="Wedding 2 clone" class="clone"/>
+        <img src="images/gallery/wedding3.jpg" alt="Wedding 3 clone" class="clone"/>
+        <img src="images/gallery/wedding4.jpg" alt="Wedding 4 clone" class="clone"/>
+        <img src="images/gallery/wedding5.jpg" alt="Wedding 5 clone" class="clone"/>
       </div>
     </div>
   </div>
@@ -79,11 +79,11 @@
         <img src="images/gallery/event3.jpg" alt="Event 3" />
         <img src="images/gallery/event4.jpg" alt="Event 4" />
         <img src="images/gallery/event5.jpg" alt="Event 5" />
-        <img src="images/gallery/event1.jpg" alt="Event 1 clone" />
-        <img src="images/gallery/event2.jpg" alt="Event 2 clone" />
-        <img src="images/gallery/event3.jpg" alt="Event 3 clone" />
-        <img src="images/gallery/event4.jpg" alt="Event 4 clone" />
-        <img src="images/gallery/event5.jpg" alt="Event 5 clone" />
+        <img src="images/gallery/event1.jpg" alt="Event 1 clone" class="clone"/>
+        <img src="images/gallery/event2.jpg" alt="Event 2 clone" class="clone"/>
+        <img src="images/gallery/event3.jpg" alt="Event 3 clone" class="clone"/>
+        <img src="images/gallery/event4.jpg" alt="Event 4 clone" class="clone"/>
+        <img src="images/gallery/event5.jpg" alt="Event 5 clone" class="clone"/>
       </div>
     </div>
   </div>
@@ -98,11 +98,11 @@
         <img src="images/gallery/jewelry3.jpg" alt="Jewelry 3" />
         <img src="images/gallery/jewelry4.jpg" alt="Jewelry 4" />
         <img src="images/gallery/jewelry5.jpg" alt="Jewelry 5" />
-        <img src="images/gallery/jewelry1.jpg" alt="Jewelry 1 clone" />
-        <img src="images/gallery/jewelry2.jpg" alt="Jewelry 2 clone" />
-        <img src="images/gallery/jewelry3.jpg" alt="Jewelry 3 clone" />
-        <img src="images/gallery/jewelry4.jpg" alt="Jewelry 4 clone" />
-        <img src="images/gallery/jewelry5.jpg" alt="Jewelry 5 clone" />
+        <img src="images/gallery/jewelry1.jpg" alt="Jewelry 1 clone" class="clone"/>
+        <img src="images/gallery/jewelry2.jpg" alt="Jewelry 2 clone" class="clone"/>
+        <img src="images/gallery/jewelry3.jpg" alt="Jewelry 3 clone" class="clone"/>
+        <img src="images/gallery/jewelry4.jpg" alt="Jewelry 4 clone" class="clone"/>
+        <img src="images/gallery/jewelry5.jpg" alt="Jewelry 5 clone" class="clone"/>
       </div>
     </div>
   </div>
@@ -117,11 +117,11 @@
         <img src="images/gallery/clothing3.jpg" alt="Clothing 3" />
         <img src="images/gallery/clothing4.jpg" alt="Clothing 4" />
         <img src="images/gallery/clothing5.jpg" alt="Clothing 5" />
-        <img src="images/gallery/clothing1.jpg" alt="Clothing 1 clone" />
-        <img src="images/gallery/clothing2.jpg" alt="Clothing 2 clone" />
-        <img src="images/gallery/clothing3.jpg" alt="Clothing 3 clone" />
-        <img src="images/gallery/clothing4.jpg" alt="Clothing 4 clone" />
-        <img src="images/gallery/clothing5.jpg" alt="Clothing 5 clone" />
+        <img src="images/gallery/clothing1.jpg" alt="Clothing 1 clone" class="clone"/>
+        <img src="images/gallery/clothing2.jpg" alt="Clothing 2 clone" class="clone"/>
+        <img src="images/gallery/clothing3.jpg" alt="Clothing 3 clone" class="clone"/>
+        <img src="images/gallery/clothing4.jpg" alt="Clothing 4 clone" class="clone"/>
+        <img src="images/gallery/clothing5.jpg" alt="Clothing 5 clone" class="clone"/>
       </div>
     </div>
   </div>
