--- a/gallery.html
+++ b/gallery.html
@@ -22,9 +22,9 @@
       </div>
     </a>
     <nav class="main-nav">
+      <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="gallery.html">Gallery</a>
-      <a href="#packages">Packages</a>
       <a href="#contact">Contact Us</a>
     </nav>
     <div class="header-right">
@@ -162,9 +162,9 @@
   <div class="footer-content">
     <p>&copy; 2025 Mira Creations. All rights reserved.</p>
     <div class="footer-links">
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="gallery.html">Gallery</a>
-      <a href="#packages">Packages</a>
       <a href="#contact">Contact</a>
     </div>
   </div>
@@ -197,9 +197,9 @@
 <!-- MOBILE HEADER/MENU -->
 <div class="mobile-nav" id="mobileNav">
   <nav class="mobile-menu-links">
+    <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="gallery.html">Gallery</a>
-    <a href="#packages">Packages</a>
     <a href="#contact">Contact Us</a>
     <button class="mobile-quote-button">Free Quote</button>
   </nav>
