--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,37 @@
     <span></span>
   </div>
 
+<!-- CONTACT PAGE TITLE -->
+<section class="contact-hero">
+  <h1>Contact Us</h1>
+  <p>Let us help make your event unforgettable. Reach out for a free quote today.</p>
+</section>
+
+<!-- CONTACT FORM -->
+<section class="contact-container">
+  <div class="contact-info">
+    <img src="images/Logo-Purple.png" class="contact-logo" alt="Mira Creations Logo">
+    <h2>Our Details</h2>
+    <p><strong>Location:</strong> Edmonton & Surrounding Areas</p>
+    <p><strong>Phone:</strong> <a href="tel:5877090058">587-709-0058</a></p>
+    <p><strong>Email:</strong> <a href="mailto:lakhbir-kv@hotmail.com">lakhbir-kv@hotmail.com</a></p>
+    <p><strong>Instagram:</strong> <a href="https://instagram.com/miracreations1" target="_blank">@miracreations1</a></p>
+    <p><strong>TikTok:</strong> <a href="#" target="_blank">@miracreations</a></p>
+  </div>
+
+  <div class="contact-form-wrapper">
+    <h2>Request a Free Quote</h2>
+    <form action="https://formsubmit.io/send/lakhbir-kv@hotmail.com" method="POST" class="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <input type="tel" name="phone" placeholder="Your Phone Number" required />
+      <input type="text" name="eventType" placeholder="Event Type (e.g. Wedding, Birthday)" required />
+      <textarea name="message" placeholder="Tell us more about your event" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</section>
+
 <!-- FOOTER SECTION -->
 <footer class="site-footer">
   <div class="footer-content">
