--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="gallery.html">Gallery</a>
-      <a href="#contact">Contact Us</a>
+      <a href="contact.html">Contact Us</a>
     </nav>
     <div class="header-right">
       <button class="quote-button">Free Quote</button>
@@ -135,7 +135,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="gallery.html">Gallery</a>
-      <a href="#contact">Contact</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </footer>
@@ -170,7 +170,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="gallery.html">Gallery</a>
-    <a href="#contact">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
     <button class="mobile-quote-button">Free Quote</button>
   </nav>
 </div>
