--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
       <a href="contact.html">Contact Us</a>
     </nav>
     <div class="header-right">
+       <a href="contact.html">
       <button class="quote-button">Free Quote</button>
 </div>
   </header>
