--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,10 @@
       <a href="about.html">About Us</a>
       <a href="gallery.html">Gallery</a>
       <a href="#packages">Packages</a>
-      <a href="#contact">Contact Us</a>
+      <a href="contact.html">Contact Us</a>
     </nav>
     <div class="header-right">
+       <a href="contact.html">
       <button class="quote-button">Free Quote</button>
 </div>
   </header>
@@ -89,7 +90,7 @@
     <a href="about.html">About Us</a>
     <a href="gallery.html">Gallery</a>
     <a href="#packages">Packages</a>
-    <a href="#contact">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
     <button class="mobile-quote-button">Free Quote</button>
   </nav>
 </div>
