--- a/gallery.html
+++ b/gallery.html
@@ -25,9 +25,10 @@
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="gallery.html">Gallery</a>
-      <a href="#contact">Contact Us</a>
+      <a href="contact.html">Contact Us</a>
     </nav>
     <div class="header-right">
+       <a href="contact.html">
       <button class="quote-button">Free Quote</button>
 </div>
   </header>
@@ -165,7 +166,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="gallery.html">Gallery</a>
-      <a href="#contact">Contact</a>
+      <a href="contact.html">Contact Us</a>
     </div>
   </div>
 </footer>
@@ -200,7 +201,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="gallery.html">Gallery</a>
-    <a href="#contact">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
     <button class="mobile-quote-button">Free Quote</button>
   </nav>
 </div>
