--- a/gallery.html
+++ b/gallery.html
@@ -28,8 +28,7 @@
       <a href="contact.html">Contact Us</a>
     </nav>
     <div class="header-right">
-       <a href="contact.html">
-      <button class="quote-button">Free Quote</button>
+        <button class="quote-button" onclick="window.location.href='contact.html'">Free Quote</button>
 </div>
   </header>
 
