--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
 </section>
 
 <!-- CONTACT ICON ROW -->
+<section class="contact-icons-section">
 <div class="contact-icons-row">
   <div class="contact-item">
     <i class="fas fa-phone-alt"></i>
@@ -65,8 +66,10 @@
     <a href="https://tiktok.com/@miracreations1" target="_blank">@miracreations1</a>
   </div>
 </div>
-
+</section>
+  
 <!-- CONTACT FORM -->
+<section class="contact-form-section">
 <div class="quote-section">
   <h2>Request a Free Quote</h2>
   <form action="https://formsubmit.io/send/lakhbir-kv@hotmail.com" method="POST" class="contact-form">
@@ -77,7 +80,8 @@
     <button type="submit">Send Message</button>
   </form>
 </div>
-
+</section>
+  
 <!-- FOOTER SECTION -->
 <footer class="site-footer">
   <div class="footer-content">
