--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 </section>
 
 <!-- CONTACT ICON ROW -->
-<section class="contact-icons-section">
+<section class="contact-iconsform-section">
 <div class="contact-icons-row">
   <div class="contact-item">
     <i class="fas fa-phone-alt"></i>
@@ -66,10 +66,8 @@
     <a href="https://tiktok.com/@miracreations1" target="_blank">@miracreations1</a>
   </div>
 </div>
-</section>
   
 <!-- CONTACT FORM -->
-<section class="contact-form-section">
 <div class="quote-section">
   <h2>Request a Free Quote</h2>
   <form action="https://formsubmit.io/send/lakhbir-kv@hotmail.com" method="POST" class="contact-form">
