--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <h1 class="welcome-title">Welcome to Mira Creations</h1>
     <h2 class="welcome-subtitle">Your trusted source for Premium Event Decor and Elegant Jewelry</h2>
-    <p class="welcome-location">Proudly Serving Edmonton and Western Canada</p>
+    <p class="welcome-location">Proudly Serving Edmonton and Surrounding Areas</p>
     <div class="scroll-indicator">
       <a href="#services">
         <span>Scroll to see our Services</span>
