--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="specialize-cards">
       <div class="card" style="background-image: url('images/Card1.jpg');"><span>Stage & Backdrop Design</span></div>
       <div class="card" style="background-image: url('images/Card2.jpg');"><span>Event Accessory Packages</span></div>
-      <div class="card" style="background-image: url('images/Card3.jpg');"><span>Themed Event Packages</span></div>
+      <div class="card" style="background-image: url('images/Card3.jpg');"><span>Suits & Kurtas</span></div>
       <div class="card" style="background-image: url('images/Card4.jpg');"><span>Baby Showers and Birthdays</span></div>
       <div class="card" style="background-image: url('images/Card5.jpg');"><span>Jewelry Sales</span></div>
       <div class="card" style="background-image: url('images/Card6.jpg');"><span>Table & Centrepiece Styling</span></div>
