--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
     <p><strong>Phone:</strong> <a href="tel:5877090058">587-709-0058</a></p>
     <p><strong>Email:</strong> <a href="mailto:lakhbir-kv@hotmail.com">lakhbir-kv@hotmail.com</a></p>
     <p><strong>Instagram:</strong> <a href="https://instagram.com/mira.creations1" target="_blank">@mira.creations1</a></p>
-    <p><strong>TikTok:</strong> <a href="htpps://tiktok.com/mira.creations1" target="_blank">@mira.creations1</a></p>
+    <p><strong>TikTok:</strong> <a href="https://tiktok.com/mira.creations1" target="_blank">@mira.creations1</a></p>
   </div>
 </div>
 
