--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
 <div class="contact-icons-row">
   <div class="contact-item">
     <i class="fas fa-phone-alt"></i>
-    <span>587-709-0058</span>
+    <a href="tel:5877090058" target="_blank">587-709-1331</a>
   </div>
   <div class="contact-item">
     <i class="fas fa-envelope"></i>
-    <span>lakhbir-kv@hotmail.com</span>
+    <a href="mailto:lakhbir-kv@hotmail.com" target="_blank">lakhbir-kv@hotmail.com</a>
   </div>
   <div class="contact-item">
     <i class="fab fa-instagram"></i>
@@ -64,7 +64,7 @@
     <a href="https://tiktok.com/@miracreations1" target="_blank">@miracreations1</a>
   </div>
 </div>
-  
+
 <!-- CONTACT FORM -->
 <div class="quote-section">
   <h2>Request a Free Quote</h2>
