--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="scroll-indicator">
       <a href="#services">
         <span>Scroll to see our Services</span>
-        <span class="down-arrow">&#x25BC;</span>
+        <span class="down-arrow">↓</span>
       </a>
     </div>
   </div>
