--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
   <div class="contact-content">
     <h2 class="specialize-title">Contact Us</h2>
 
-    <form action="https://formsubmit.io/send/lakhbir-kv@hotmail.com" method="POST" class="contact-form">
+    <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="tel" name="phone" placeholder="Your Phone Number" required />
@@ -159,7 +159,7 @@
     <h3>Contact Information</h3>
     <p><strong>Location:</strong> Edmonton, Alberta</p>
     <p><strong>Phone:</strong> <a href="tel:5877090058">587-709-0058</a></p>
-    <p><strong>Email:</strong> <a href="mailto:lakhbir-kv@hotmail.com">lakhbir-kv@hotmail.com</a></p>
+    <p><strong>Email:</strong> <a href="mailto:mira.creations@outlook.com">mira.creations@outlook.com</a></p>
     <p><strong>Instagram:</strong> <a href="https://instagram.com/mira.creations1" target="_blank">@mira.creations1</a></p>
     <p><strong>TikTok:</strong> <a href="https://tiktok.com/@mira.creations1" target="_blank">@mira.creations1</a></p>
   </div>
