--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
   </div>
   <div class="contact-item">
     <i class="fas fa-envelope"></i>
-    <a href="mailto:lakhbir-kv@hotmail.com" target="_blank">lakhbir-kv@hotmail.com</a>
+    <a href="mailto:mira.creations@outlook.com" target="_blank">mira.creations@outlook.com</a>
   </div>
   <div class="contact-item">
     <i class="fab fa-instagram"></i>
@@ -68,7 +68,7 @@
 <!-- CONTACT FORM -->
 <div class="quote-section">
   <h2>Request a Free Quote</h2>
-  <form action="https://formsubmit.io/send/lakhbir-kv@hotmail.com" method="POST" class="contact-form">
+  <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
     <input type="text" name="name" placeholder="Your Name" required />
     <input type="email" name="email" placeholder="Your Email" required />
     <input type="tel" name="phone" placeholder="Your Phone Number" required />
