--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
     <a href="about.html">About Us</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact Us</a>
-    <button class="mobile-quote-button">Free Quote</button>
+    <button class="mobile-quote-button" onclick="window.location.href='contact.html'">Free Quote</button>
   </nav>
 </div>
   
