--- a/about.html
+++ b/about.html
@@ -48,10 +48,10 @@
     <div class="founder-text">
       <h2 class="founder-title">Meet Munvir Virk</h2>
       <p>
-        Mira Creations began as a labor of love. In 2022, I took on the challenge of planning and designing the decor for my older sister’s wedding — an experience that awakened a passion I never knew I had. With every draped fabric, floral arrangement, and personalized detail, I discovered a deep appreciation for creating beautiful spaces that bring people joy.
+        Mira Creations is a family-run business founded by a mother and her two daughters. It all began in 2022 when we took on the challenge of planning and decorating Maninder Virk’s wedding. From selecting jewelry and outfits to designing every floral arrangement and personal detail, we discovered a shared passion for creating beautiful, memorable experiences that bring people joy.
       </p>
       <p>
-        What started as a one-time project quickly blossomed into a growing business. Since then, I’ve poured my heart into building Mira Creations into a trusted name in event decor and jewelry. Today, we help families across Alberta turn their most important celebrations into unforgettable moments — with care, culture, and creativity at the center of everything we do.
+        What started as a one-time project quickly blossomed into a growing business. Since then, we’ve poured our hearts into building Mira Creations into a trusted name in event decor and jewelry. Today, we help families across Edmonton turn their most important celebrations into unforgettable moments, with care, culture, and creativity at the center of everything we do.
       </p>
     </div>
   </div>
