--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
       <img src="images/about-photo.jpg" alt="Munvir Virk - Founder of Mira Creations" />
     </div>
     <div class="founder-text">
-      <h2 class="founder-title">Meet Munvir Virk</h2>
+      <h2 class="founder-title">Meet The Mira Creations Team</h2>
       <p>
-        Mira Creations is a family-run business founded by a mother and her two daughters. It all began in 2022 when we took on the challenge of planning and decorating Maninder Virk’s wedding. From selecting jewelry and outfits to designing every floral arrangement and personal detail, we discovered a shared passion for creating beautiful, memorable experiences that bring people joy.
+        Mira Creations is a family-run business founded by a mother and her two daughters. It all began in 2022 when we took on the challenge of planning and decorating a family member's wedding. From selecting jewelry and outfits to designing every floral arrangement and personal detail, we discovered a shared passion for creating beautiful, memorable experiences that bring people joy.
       </p>
       <p>
         What started as a one-time project quickly blossomed into a growing business. Since then, we’ve poured our hearts into building Mira Creations into a trusted name in event decor and jewelry. Today, we help families across Edmonton turn their most important celebrations into unforgettable moments, with care, culture, and creativity at the center of everything we do.
