--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="tel" name="phone" placeholder="Your Phone Number" required />
-      <textarea name="message" placeholder="How Can We Help?" required></textarea>
+      <textarea name="message" placeholder="How can we help you?" required></textarea>
       <button type="submit">Send Message</button>
     </form>
   </div>
