--- a/about.html
+++ b/about.html
@@ -43,10 +43,10 @@
   <section class="founder-section">
   <div class="founder-content">
     <div class="founder-image">
-      <img src="images/about-photo.jpg" alt="Munvir Virk - Founder of Mira Creations" />
+      <img src="images/about-photo.jpg" alt="Family Indian Wedding Decor Business Mira Creations" />
     </div>
     <div class="founder-text">
-      <h2 class="founder-title">Meet The Mira Creations Team</h2>
+      <h2 class="founder-title">Meet The Team</h2>
       <p>
         Mira Creations is a family-run business founded by a mother and her two daughters. It all began in 2022 when we took on the challenge of planning and decorating a family member's wedding. From selecting jewelry and outfits to designing every floral arrangement and personal detail, we discovered a shared passion for creating beautiful, memorable experiences that bring people joy.
       </p>
