--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       </div>
       <div class="brand-text">
         <div class="brand-title">MIRA CREATIONS</div>
-        <div class="brand-subtitle">JEWELRY AND DECOR</div>
+        <div class="brand-subtitle">JEWELLERY AND DECOR</div>
       </div>
     </a>
     <nav class="main-nav">
@@ -48,10 +48,10 @@
     <div class="founder-text">
       <h2 class="founder-title">Meet The Team</h2>
       <p>
-        Mira Creations is a family-run business founded by a mother and her two daughters. It all began in 2022 when we took on the challenge of planning and decorating a family member's wedding. From selecting jewelry and outfits to designing every floral arrangement and personal detail, we discovered a shared passion for creating beautiful, memorable experiences that bring people joy.
+        Mira Creations is a family-run business founded by a mother and her two daughters. It all began in 2022 when we took on the challenge of planning and decorating a family member's wedding. From selecting jewellery and outfits to designing every floral arrangement and personal detail, we discovered a shared passion for creating beautiful, memorable experiences that bring people joy.
       </p>
       <p>
-        What started as a one-time project quickly blossomed into a growing business. Since then, we’ve poured our hearts into building Mira Creations into a trusted name in event decor and jewelry. Today, we help families across Edmonton turn their most important celebrations into unforgettable moments, with care, culture, and creativity at the center of everything we do.
+        What started as a one-time project quickly blossomed into a growing business. Since then, we’ve poured our hearts into building Mira Creations into a trusted name in event decor and jewellery. Today, we help families across Edmonton turn their most important celebrations into unforgettable moments, with care, culture, and creativity at the center of everything we do.
       </p>
     </div>
   </div>
