--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       </div>
       <div class="brand-text">
         <div class="brand-title">MIRA CREATIONS</div>
-        <div class="brand-subtitle">JEWELRY AND DECOR</div>
+        <div class="brand-subtitle">JEWELLERY AND DECOR</div>
       </div>
     </a>
     <nav class="main-nav">
