--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
       </div>
       <div class="brand-text">
         <div class="brand-title">MIRA CREATIONS</div>
-        <div class="brand-subtitle">JEWELRY AND DECOR</div>
+        <div class="brand-subtitle">JEWELLERY AND DECOR</div>
       </div>
     </a>
     <nav class="main-nav">
@@ -88,9 +88,9 @@
     </div>
   </div>
 
-  <!-- Jewelry -->
+  <!-- Jewellery -->
   <div class="gallery-category">
-    <h2>Jewelry</h2>
+    <h2>Jewellery</h2>
     <div class="carousel-wrapper">
       <div class="carousel track-jewelry">
         <img src="images/gallery/jewelry1.jpg" alt="Jewelry 1" />
