--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="brand-text">
         <div class="brand-title">MIRA CREATIONS</div>
-        <div class="brand-subtitle">JEWELRY AND DECOR</div>
+        <div class="brand-subtitle">JEWELLERY AND DECOR</div>
       </div>
     </a>
     <nav class="main-nav">
@@ -48,7 +48,7 @@
       <img src="images/Logo-Black.png" class="welcome-logo black-logo" />
     </div>
     <h1 class="welcome-title">Welcome to Mira Creations</h1>
-    <h2 class="welcome-subtitle">Your trusted source for Premium Event Decor and Elegant Jewelry</h2>
+    <h2 class="welcome-subtitle">Your trusted source for Premium Event Decor and Elegant Jewellery</h2>
     <p class="welcome-location">Proudly Serving Edmonton and Surrounding Areas</p>
     <div class="scroll-indicator">
       <a href="#services">
@@ -71,7 +71,7 @@
 <section id="why-us" class="why-us-section">
   <div class="why-us-content">
     <h2 class="specialize-title">Why Choose Us</h2>
-    <p>At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated decor and jewelry. Whether you're planning a wedding, cultural celebration, or special event, we provide personalized service, premium craftsmanship, and timeless designs that reflect your style. With a deep understanding of tradition and a flair for the modern, we make every detail count, so you can focus on making memories.</p>
+    <p>At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated decor and jewellery. Whether you're planning a wedding, cultural celebration, or special event, we provide personalized service, premium craftsmanship, and timeless designs that reflect your style. With a deep understanding of tradition and a flair for the modern, we make every detail count, so you can focus on making memories.</p>
   </div>
 </section>
 
@@ -92,7 +92,7 @@
       <div class="card" style="background-image: url('images/Card2.jpg');"><span>Event Accessory Packages</span></div>
       <div class="card" style="background-image: url('images/Card3.jpg');"><span>Suits & Kurtas</span></div>
       <div class="card" style="background-image: url('images/Card4.jpg');"><span>Baby Showers and Birthdays</span></div>
-      <div class="card" style="background-image: url('images/Card5.jpg');"><span>Jewelry Sales</span></div>
+      <div class="card" style="background-image: url('images/Card5.jpg');"><span>Jewellery Sales</span></div>
       <div class="card" style="background-image: url('images/Card6.jpg');"><span>Table & Centrepiece Styling</span></div>
     </div>
 
