--- a/gallery.html
+++ b/gallery.html
@@ -92,17 +92,17 @@
   <div class="gallery-category">
     <h2>Jewellery</h2>
     <div class="carousel-wrapper">
-      <div class="carousel track-jewelry">
-        <img src="images/gallery/jewelry1.jpg" alt="Jewelry 1" />
-        <img src="images/gallery/jewelry2.jpg" alt="Jewelry 2" />
-        <img src="images/gallery/jewelry3.jpg" alt="Jewelry 3" />
-        <img src="images/gallery/jewelry4.jpg" alt="Jewelry 4" />
-        <img src="images/gallery/jewelry5.jpg" alt="Jewelry 5" />
-        <img src="images/gallery/jewelry1.jpg" alt="Jewelry 1 clone" class="clone"/>
-        <img src="images/gallery/jewelry2.jpg" alt="Jewelry 2 clone" class="clone"/>
-        <img src="images/gallery/jewelry3.jpg" alt="Jewelry 3 clone" class="clone"/>
-        <img src="images/gallery/jewelry4.jpg" alt="Jewelry 4 clone" class="clone"/>
-        <img src="images/gallery/jewelry5.jpg" alt="Jewelry 5 clone" class="clone"/>
+      <div class="carousel track-jewellery">
+        <img src="images/gallery/jewellery1.jpg" alt="Jewellery 1" />
+        <img src="images/gallery/jewellery2.jpg" alt="Jewellery 2" />
+        <img src="images/gallery/jewellery3.jpg" alt="Jewellery 3" />
+        <img src="images/gallery/jewellery4.jpg" alt="Jewellery 4" />
+        <img src="images/gallery/jewellery5.jpg" alt="Jewellery 5" />
+        <img src="images/gallery/jewellery1.jpg" alt="Jewellery 1 clone" class="clone"/>
+        <img src="images/gallery/jewellery2.jpg" alt="Jewellery 2 clone" class="clone"/>
+        <img src="images/gallery/jewellery3.jpg" alt="Jewellery 3 clone" class="clone"/>
+        <img src="images/gallery/jewellery4.jpg" alt="Jewellery 4 clone" class="clone"/>
+        <img src="images/gallery/jewellery5.jpg" alt="Jewellery 5 clone" class="clone"/>
       </div>
     </div>
   </div>
