--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html">Home</a>
+      <a href="#home">Home</a>
       <a href="about.html">About Us</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html">Contact Us</a>
