--- a/404.html
+++ b/404.html
@@ -9,18 +9,14 @@
   <meta name="robots" content="noindex">
 </head>
 <body>
-
   <section class="contact-hero">
     <div class="logo-container" style="margin-bottom: 1rem;">
       <img src="images/Logo-Purple.png" class="welcome-logo" alt="Mira Creations Logo" />
     </div>
-
     <h1>404 - Page Not Found</h1>
     <p>Oops! The page you're looking for doesn't exist.</p>
     <p style="margin-top: 1rem;">But no worries — we're here to help!</p>
-  </section>
-
-  <section class="contact-icons-section">
+    <h2>Contact us directly or explore our socials for more information./h2>
     <div class="contact-icons-row">
       <div class="contact-item">
         <i class="fas fa-phone-alt"></i>
@@ -41,14 +37,6 @@
     </div>
   </section>
 
-  <section class="quote-section">
-    <h2>Still need help?</h2>
-    <p style="color: white; max-width: 500px; margin: 0 auto 1.5rem;">
-      Contact us directly or explore our gallery and services for more information.
-    </p>
-    <a href="contact.html" class="specialize-button" style="margin-top: 1rem;">Contact Us</a>
-    <a href="gallery.html" class="specialize-button" style="margin-top: 1rem;">View Gallery</a>
-  </section>
 
 </body>
 </html>
