--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <h1>404 - Page Not Found</h1>
     <p>Oops! The page you're looking for doesn't exist.</p>
     <p style="margin-top: 1rem;">But no worries — we're here to help!</p>
-    <h2>Contact us directly or explore our socials for more information./h2>
+    <h2>Contact us directly or explore our socials for more information.</h2>
     <div class="contact-icons-row">
       <div class="contact-item">
         <i class="fas fa-phone-alt"></i>
