--- a/404.html
+++ b/404.html
@@ -28,11 +28,11 @@
       </div>
       <div class="contact-item">
         <i class="fab fa-instagram"></i>
-        <a href="https://instagram.com/miracreations1" target="_blank">@miracreations1</a>
+        <a href="https://instagram.com/mira.creations1" target="_blank">@mira.creations1</a>
       </div>
       <div class="contact-item">
         <i class="fab fa-tiktok"></i>
-        <a href="https://tiktok.com/@miracreations1" target="_blank">@miracreations1</a>
+        <a href="https://tiktok.com/@mira.creations1" target="_blank">@mira.creations1</a>
       </div>
     </div>
   </section>
