--- a/about.html
+++ b/about.html
@@ -70,16 +70,16 @@
   <div class="carousel-container">
     <div class="carousel-track">
       <div class="testimonial-slide active">
-        <p>"Mira Creations made my wedding day magical! The decor was breathtaking."</p>
-        <span>- Amandeep & Harjit, Edmonton</span>
+        <p>"Mira Creations made our wedding day magical! The decor was breathtaking."</p>
+        <span>- Amandeep & Harjit</span>
       </div>
       <div class="testimonial-slide">
         <p>"Professional, thoughtful, and beautiful designs. Our baby shower was perfect."</p>
-        <span>- Kaur Family</span>
+        <span>- Gurwinder Singh</span>
       </div>
       <div class="testimonial-slide">
-        <p>"Munvir was incredible to work with. She brought our cultural wedding vision to life."</p>
-        <span>- Jasleen & Manvir</span>
+        <p>"The entire Mira Team was incredible to work with. They brought our diwali event to life."</p>
+        <span>- Jasleen & Kiran</span>
       </div>
     </div>
 
