--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- HEADER AND MENU -->
   <header class="main-header">
-    <a href="index.html" class="header-left">
+    <a href="/" class="header-left">
       <div class="logo-container header-logo-container">
         <img src="images/Logo-Purple.png" class="logo header-logo purple-logo" />
         <img src="images/Logo-Black.png" class="logo header-logo black-logo" />
@@ -22,13 +22,13 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="/">Home</a>
+      <a href="AboutUs/">About Us</a>
+      <a href="Gallery/">Gallery</a>
+      <a href="ContactUs/">Contact Us</a>
     </nav>
     <div class="header-right">
-       <button class="quote-button" onclick="window.location.href='contact.html'">Free Quote</button>
+       <button class="quote-button" onclick="window.location.href='ContactUs/'">Free Quote</button>
 </div>
   </header>
 
@@ -96,7 +96,7 @@
       <div class="card" style="background-image: url('images/Card6.jpg');"><span>Table & Centrepiece Styling</span></div>
     </div>
 
-    <a href="gallery.html" class="specialize-button">Check Out Our Gallery</a>
+    <a href="Gallery/" class="specialize-button">Check Out Our Gallery</a>
   </div>
 </section>
 
@@ -127,10 +127,10 @@
   <div class="footer-content">
     <p>&copy; 2025 Mira Creations. All rights reserved.</p>
     <div class="footer-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="/">Home</a>
+      <a href="AboutUs/">About</a>
+      <a href="Gallery/">Gallery</a>
+      <a href="ContactUs/">Contact Us</a>
     </div>
   </div>
 </footer>
@@ -163,11 +163,11 @@
 <!-- MOBILE HEADER/MENU -->
 <div class="mobile-nav" id="mobileNav">
   <nav class="mobile-menu-links">
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="contact.html">Contact Us</a>
-    <button class="mobile-quote-button" onclick="window.location.href='contact.html'">Free Quote</button>
+    <a href="/">Home</a>
+    <a href="AboutUs/">About Us</a>
+    <a href="Gallery/">Gallery</a>
+    <a href="ContactUs/">Contact Us</a>
+    <button class="mobile-quote-button" onclick="window.location.href='ContactUs/'">Free Quote</button>
   </nav>
 </div>
   
