--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-CA">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="robots" content="index, follow">
-  <title>MiraCreations</title>
+
+  <title>About Mira Creations | Edmonton Event Decor & Jewelry</title>
+  <meta name="description" content="Mira Creations is a family-run business in Edmonton specializing in South Asian event decor and jewelry. Learn more about our story and commitment to excellence." />
+  <meta name="keywords" content="Mira Creations, Edmonton event decor, family business wedding decor, jewelry Edmonton, South Asian weddings, Punjabi decor, cultural event styling" />
+  <link rel="canonical" href="https://miradecorandjewellery.com/AboutUs/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="About Mira Creations | Edmonton Event Decor & Jewelry" />
+  <meta property="og:description" content="Family-owned wedding and event decor company in Edmonton. Discover how Mira Creations started and what makes our team unique." />
+  <meta property="og:image" content="https://miradecorandjewellery.com/images/about-photo.jpg" />
+  <meta property="og:url" content="https://miradecorandjewellery.com/AboutUs/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_CA" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About Mira Creations | Edmonton Event Decor & Jewelry" />
+  <meta name="twitter:description" content="Learn how Mira Creations began and meet the team behind Edmonton's trusted wedding and event decor business." />
+  <meta name="twitter:image" content="https://miradecorandjewellery.com/images/about-photo.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Mira Creations",
+    "image": "https://miradecorandjewellery.com/images/about-photo.jpg",
+    "@id": "https://miradecorandjewellery.com",
+    "url": "https://miradecorandjewellery.com",
+    "telephone": "+1-587-709-0058",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "",
+      "addressLocality": "Edmonton",
+      "addressRegion": "AB",
+      "postalCode": "",
+      "addressCountry": "CA"
+    },
+    "sameAs": [
+      "https://instagram.com/mira.creations1",
+      "https://tiktok.com/@mira.creations1"
+    ],
+    "description": "Mira Creations is a family-run wedding and event decor company based in Edmonton. We specialize in South Asian celebrations and jewelry for special occasions."
+  }
+  </script>
+
+  <!-- Styles and Fonts -->
   <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
 </head>
+  
 <body class="about-page">
 
 <!-- HEADER AND MENU -->
@@ -41,18 +91,18 @@
   </div>
 
   <!-- ABOUT THE FOUNDER SECTION -->
-  <section class="founder-section">
+<section class="founder-section">
   <div class="founder-content">
     <div class="founder-image">
-      <img src="/images/about-photo.jpg" alt="Family Indian Wedding Decor Business Mira Creations" />
+      <img src="/images/about-photo.jpg" alt="Mira Creations family wedding decor team in Edmonton" loading="lazy" />
     </div>
     <div class="founder-text">
-      <h2 class="founder-title">Meet The Team</h2>
+      <h2 class="founder-title" role="heading" aria-level="2">Meet The Team</h2>
       <p>
-        Mira Creations is a family-run business founded by a mother and her two daughters. It all began in 2022 when we took on the challenge of planning and decorating a family member's wedding. From selecting jewellery and outfits to designing every floral arrangement and personal detail, we discovered a shared passion for creating beautiful, memorable experiences that bring people joy.
+        Mira Creations is a <strong>family-run wedding and event decor business</strong> based in Edmonton, Alberta. Founded by a mother and her two daughters, our journey began in 2022 when we took on the challenge of planning a family member's wedding. From selecting jewelry and outfits to designing each floral arrangement and personal detail, we discovered a shared passion for creating unforgettable experiences.
       </p>
       <p>
-        What started as a one-time project quickly blossomed into a growing business. Since then, we’ve poured our hearts into building Mira Creations into a trusted name in event decor and jewellery. Today, we help families across Edmonton turn their most important celebrations into unforgettable moments, with care, culture, and creativity at the center of everything we do.
+        What started as a one-time project quickly evolved into a trusted name in <a href="/Gallery/" title="Event decor and jewelry examples">event styling and bridal accessories</a>. We now work with clients across Edmonton to bring their most important celebrations to life — with care, culture, and creativity at the heart of everything we do.
       </p>
     </div>
   </div>
@@ -66,29 +116,39 @@
 </div>
 
 <!-- REVIEW SECTION -->
-<section class="testimonial-carousel">
-  <h2 class="testimonial-title">What Our Clients Say</h2>
-  <div class="carousel-container">
+<section class="testimonial-carousel" role="region" aria-label="Client Testimonials">
+  <h2 class="testimonial-title" role="heading" aria-level="2">What Our Clients Say</h2>
+  
+  <div class="carousel-container" itemscope itemtype="https://schema.org/Review">
     <div class="carousel-track">
       <div class="testimonial-slide active">
-        <p>"Mira Creations made our wedding day magical! The decor was breathtaking."</p>
-        <span>- Amandeep & Harjit</span>
+        <blockquote itemprop="reviewBody">“Mira Creations made our wedding day magical! The decor was breathtaking and elegant.”</blockquote>
+        <cite itemprop="author" itemscope itemtype="https://schema.org/Person">
+          <span itemprop="name">Amandeep & Harjit</span>
+        </cite>
       </div>
-      <div class="testimonial-slide">
-        <p>"Professional, thoughtful, and beautiful designs. Our baby shower was perfect."</p>
-        <span>- Gurwinder Singh</span>
+      
+      <div class="testimonial-slide" itemscope itemtype="https://schema.org/Review">
+        <blockquote itemprop="reviewBody">“Professional, thoughtful, and beautiful designs. Our baby shower was perfect.”</blockquote>
+        <cite itemprop="author" itemscope itemtype="https://schema.org/Person">
+          <span itemprop="name">Gurwinder Singh</span>
+        </cite>
       </div>
-      <div class="testimonial-slide">
-        <p>"The entire Mira Team was incredible to work with. They brought our diwali event to life."</p>
-        <span>- Jasleen & Kiran</span>
+      
+      <div class="testimonial-slide" itemscope itemtype="https://schema.org/Review">
+        <blockquote itemprop="reviewBody">“The entire Mira Team was incredible to work with. They brought our Diwali event to life with vibrant, meaningful decor.”</blockquote>
+        <cite itemprop="author" itemscope itemtype="https://schema.org/Person">
+          <span itemprop="name">Jasleen & Kiran</span>
+        </cite>
       </div>
     </div>
 
     <!-- Controls -->
-    <button class="carousel-btn prev">&#10094;</button>
-    <button class="carousel-btn next">&#10095;</button>
+    <button class="carousel-btn prev" aria-label="Previous testimonial">&#10094;</button>
+    <button class="carousel-btn next" aria-label="Next testimonial">&#10095;</button>
   </div>
 </section>
+
 
 <!-- DIVIDER BETWEEN REVIEW & GALLERY SECTIONS -->
 <div class="section-divider">
@@ -113,18 +173,33 @@
   <div class="specialize-line"></div>
 </div>
   
-  <!-- CONTACT SECTION -->
-<section id="contact" class="contact-section">
-  <div class="contact-content">
-    <h2 class="specialize-title">Contact Us</h2>
+<!-- CONTACT SECTION -->
+<section id="contact" class="contact-section" role="region" aria-label="Contact Mira Creations">
+  <div class="contact-content" itemscope itemtype="https://schema.org/LocalBusiness">
+    <h2 class="specialize-title" role="heading" aria-level="2">Contact Us</h2>
+
+    <meta itemprop="name" content="Mira Creations" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="tel" name="phone" placeholder="Your Phone Number" required />
-      <textarea name="message" placeholder="How can we help you?" required></textarea>
+      <textarea name="message" placeholder="Tell us about your event or jewelry needs" required></textarea>
       <button type="submit">Send Message</button>
     </form>
+
+    <div class="contact-details">
+      <p><strong>Phone:</strong> <a href="tel:5877090058" itemprop="telephone">587-709-0058</a></p>
+      <p><strong>Email:</strong> <a href="mailto:mira.creations@outlook.com" itemprop="email">mira.creations@outlook.com</a></p>
+      <p><strong>Location:</strong> <span itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+        <span itemprop="addressLocality">Edmonton</span>, 
+        <span itemprop="addressRegion">AB</span>
+      </span></p>
+      <p><strong>Instagram:</strong> <a href="https://instagram.com/mira.creations1" target="_blank">@mira.creations1</a></p>
+      <p><strong>TikTok:</strong> <a href="https://tiktok.com/@mira.creations1" target="_blank">@mira.creations1</a></p>
+    </div>
   </div>
 </section>
 
