--- a/index.html
+++ b/index.html
@@ -203,17 +203,32 @@
 </div>
 
 <!-- CONTACT SECTION -->
-<section id="contact" class="contact-section">
-  <div class="contact-content">
-    <h2 class="specialize-title">Contact Us</h2>
+<section id="contact" class="contact-section" role="region" aria-label="Contact Mira Creations">
+  <div class="contact-content" itemscope itemtype="https://schema.org/LocalBusiness">
+    <h2 class="specialize-title" role="heading" aria-level="2">Contact Us</h2>
+
+    <meta itemprop="name" content="Mira Creations" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="tel" name="phone" placeholder="Your Phone Number" required />
-      <textarea name="message" placeholder="How can we help you?" required></textarea>
+      <textarea name="message" placeholder="Tell us about your event or jewelry needs" required></textarea>
       <button type="submit">Send Message</button>
     </form>
+
+    <div class="contact-details">
+      <p><strong>Phone:</strong> <a href="tel:5877090058" itemprop="telephone">587-709-0058</a></p>
+      <p><strong>Email:</strong> <a href="mailto:mira.creations@outlook.com" itemprop="email">mira.creations@outlook.com</a></p>
+      <p><strong>Location:</strong> <span itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+        <span itemprop="addressLocality">Edmonton</span>, 
+        <span itemprop="addressRegion">AB</span>
+      </span></p>
+      <p><strong>Instagram:</strong> <a href="https://instagram.com/mira.creations1" target="_blank">@mira.creations1</a></p>
+      <p><strong>TikTok:</strong> <a href="https://tiktok.com/@mira.creations1" target="_blank">@mira.creations1</a></p>
+    </div>
   </div>
 </section>
 
